--- a/register.html
+++ b/register.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
-</head>
-
-<body>
-  <h1>Welcome</h1>
-</body>
-</html>
+<p>this is the new repo</p>
+<p>this is new feature</p>
